<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HorseRhythm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_save">Save</string>
    <string name="button_instructor">Instructor</string>
    <string name="button_patient">Patient</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_instructor">InstructorActivity</string>
	<string name="minus">-</string>
	<string name="plus">+</string>
	<string name="bps">bps</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <color name="yellow">#DEE054</color>
    <string name="timesignature">time signature</string>
    <string name="dash">/</string>
    <string name="volume">volume</string>
    <color name="black">#000000</color>
    <string name="one">1</string>    
	
    
</resources>
