<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Target BPM" />

        <TextView
            android:id="@+id/bps"
            android:layout_width="0px"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/measuredBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MeasuredBPM" />

        <TextView
            android:id="@+id/timesignature"
            android:layout_width="0px"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/currentBeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/one"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BPM difference" />

        <TextView
            android:id="@+id/BPMdiffTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlusClick"
            android:text="@string/plus"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesignature"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/beatspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/notespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/volumebar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/startstop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onStartStopClick"
        android:text="@string/start"
        android:textSize="80dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
    </LinearLayout>

</LinearLayout>